--- a/.github/workflows/v1-hdmi-zero2w.yml
+++ b/.github/workflows/v1-hdmi-zero2w.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   os:
-    uses: pikvm/os/.github/workflows/os.yml@test
+    uses: mcuxmx/pikvm-os/.github/workflows/os.yml@test
     with:
       BOARD: zero2w
       PLATFORM: v1-hdmi
