--- a/.github/workflows/os.yml
+++ b/.github/workflows/os.yml
@@ -49,8 +49,9 @@ jobs:
           echo "SUFFIX=$SUFFIX" >> config.mk
           echo "OLED=$OLED" >> config.mk
           echo "FAN=$FAN" >> config.mk
-          echo "firmware name:" ${{ PLATFORM }}-${{ BOARD }}-latest.img.xz
-          echo "firmware path:" /home/runner/work/pikvm-os/pikvm-os/.pi-builder/${{ PLATFORM }}-${{ BOARD }}
+          
+          echo "firmware name:" ${{inputs.PLATFORM}}-${{inputs.BOARD}}-latest.img.xz
+          echo "firmware path:" /home/runner/work/pikvm-os/pikvm-os/.pi-builder/${{inputs.PLATFORM}}-${{inputs.BOARD}}
 
       - name: Building OS
         run: make os NC=1
@@ -62,5 +63,5 @@ jobs:
         uses: actions/upload-artifact@main
         if: steps.organize.outputs.status == 'success' && !cancelled()
         with:
-          name: ${{ PLATFORM }}-${{ BOARD }}-latest.img.xz
-          path: /home/runner/work/pikvm-os/pikvm-os/.pi-builder/${{ PLATFORM }}-${{ BOARD }}	
+          name: ${{inputs.PLATFORM}}-${{inputs.BOARD}}-latest.img.xz
+          path: /home/runner/work/pikvm-os/pikvm-os/.pi-builder/${{inputs.PLATFORM}}-${{inputs.BOARD}}
